# freu-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: skill-format.md
examples/Github/: FindMostCommentedIssue.json  FindRepoWebsite.json  SKILL.md  StarRepository.json
src/freu_cli/: __init__.py  __main__.py  cli.py
src/freu_cli/capture/: __init__.py  bridge.py  event_record.py  recorder.py
src/freu_cli/learn/: __init__.py  dsl_primitives.py  emit.py  errors.py  llm_client.py  models.py  pipeline.py  validate.py
src/freu_cli/learn/prompts/: __init__.py  identify.txt  normalize.txt  resolve.txt  synthesize.txt
src/freu_cli/learn/stages/: _prompts.py  identify.py  normalize.py  resolve.py  synthesize.py
src/freu_cli/run/: __init__.py  dsl_executor.py  errors.py  executor.py  models.py  parser.py  registry.py  renderer.py  workflow_loader.py
src/freu_cli/run/actions/: browser_actions.py  logic_actions.py
src/freu_cli/run/browser/: __init__.py  base.py  bridge_manager.py  browser_models.py  extension_adapter.py  resolve_js.py
tests/: conftest.py  test_cli.py
tests/capture/: test_bridge.py  test_event_record.py  test_recorder.py
tests/learn/: test_emit.py  test_identify.py  test_llm_client.py  test_normalize.py  test_pipeline.py  test_resolve.py  test_synthesize.py  test_validate.py
tests/run/: test_executor.py  test_parser.py  test_registry.py  test_resolve_js.py
